# webshell

./: Cargo.toml  README.md  justfile  package-lock.json  package.json
src/: main.rs
ui/: index.html  main.js
