[package]
name = "webshell"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.1", features = ["ws"] }
bytes = "1.3.0"
clap = { version = "4.0.29", features = ["derive", "env"] }
console-subscriber = "0.1.8"
futures = "0.3.25"
miette = { version = "5.5.0", features = ["fancy"] }
nix = "0.26.1"
tokio = { version = "1.23.0", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "process",
    "tracing",
] }
tower-http = { version = "0.3.5", features = ["fs"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
